--- a/app/views/registrations/signup.erb
+++ b/app/views/registrations/signup.erb
@@ -6,6 +6,6 @@
   <input type="text" id="email" name="email">
   <label for "password">Password: </label>
   <input type="text" id="password" name="password">
-  <input type="submit" value="submit" id="submit">
+  <input type="submit" value="Sign Up" id="Sign Up">
 </form>
 
